--- a/_static/templates/ResultsComputePage.html
+++ b/_static/templates/ResultsComputePage.html
@@ -3,7 +3,11 @@
 {{ endblock }}
 
 {{ block content }}
-<div text-align:right>
- {{next_button}}
+
+
+
+<div style="float: right;">
+{% next_button %}
 </div>
+
 {{ endblock }}
