--- a/_static/templates/Trivial_DecisionScreen.html
+++ b/_static/templates/Trivial_DecisionScreen.html
@@ -9,7 +9,7 @@
         <tr>
             <td> </td>
             <td> <b> Payment if H </b> </td>
-            <td> <b> Paymemt if T </b> </td>
+            <td> <b> Payment if T </b> </td>
         </tr>
 
         <tr>
