--- a/_static/templates/Complex_DecisionScreen.html
+++ b/_static/templates/Complex_DecisionScreen.html
@@ -24,12 +24,12 @@
                 <b> {{ lottery_1.1 }} </b>
             </td>
             <td> 
-                <input type="range" oninput = "update_value(option1_slider,option1_form)" min="0" max="100" step=".01" class="slider" id="option1" value="0" name="portfolio_shares_a1">
+                <input type="range" oninput = "update_value(option1_slider,option1_form)" min="0" max="100" step="1" class="slider" id="option1" value="0" name="portfolio_shares_a1">
             </td>
             <td>
                 <div class="input-group">
                 <input type="button" onclick="dec(option1_form,option1_slider)" class="btn btn-outline-secondary" id="option1_form_dec" value="-">
-                <input type="number" oninput = "update_value(option1_form,option1_slider)" class="form-control" id="option1_form" name="portfolio_shares_a1" min="0" max="100" step=".01" value="0"/>
+                <input type="number" oninput = "update_value(option1_form,option1_slider)" class="form-control" id="option1_form" name="portfolio_shares_a1" min="0" max="100" step="1" value="0"/>
                 <input type="button" onclick="inc(option1_form,option1_slider)" class="btn btn-outline-secondary" id="option1_form_inc" value="+">
             </div>
             </td>
@@ -44,12 +44,12 @@
                 <b> {{ lottery_2.1 }} </b>
             </td>
             <td>
-                <input type="range" oninput = "update_value(option2_slider,option2_form)" min="0" max="100" step=".01" id="option2" value="0" name="portfolio_shares_a2">
+                <input type="range" oninput = "update_value(option2_slider,option2_form)" min="0" max="100" step="1" id="option2" value="0" name="portfolio_shares_a2">
             </td>
             <td>
                 <div class="input-group">
                 <input type="button" onclick="dec(option2_form,option2_slider)"  class="btn btn-outline-secondary" id="option2_form_dec" value="-">
-                <input type="number" oninput = "update_value(option2_form,option2_slider)" class="form-control" id="option2_form" name="portfolio_shares_a2" min="0" max="100" step=".01" value="0"/>
+                <input type="number" oninput = "update_value(option2_form,option2_slider)" class="form-control" id="option2_form" name="portfolio_shares_a2" min="0" max="100" step="1" value="0"/>
                 <input type="button" onclick="inc(option2_form,option2_slider)" class="btn btn-outline-secondary" id="option2_form_inc" value="+">
             </div>
             </td>
@@ -65,12 +65,12 @@
                 <b> {{ lottery_3.1 }} </b>
             </td>
             <td>
-                <input type="range" oninput = "update_value(option3_slider,option3_form)" min="0" max="100" step=".01" id="option3" value="0" name="portfolio_shares_a3">
+                <input type="range" oninput = "update_value(option3_slider,option3_form)" min="0" max="100" step="1" id="option3" value="0" name="portfolio_shares_a3">
             </td>
             <td>
                 <div class="input-group">
                 <input type="button" onclick="dec(option3_form,option3_slider)"  class="btn btn-outline-secondary" id="option3_form_dec" value="-">
-                <input type="number" oninput = "update_value(option3_form,option3_slider)" class="form-control" id="option3_form" name="portfolio_shares_a3" min="0" max="100" step=".01" value="0"/>
+                <input type="number" oninput = "update_value(option3_form,option3_slider)" class="form-control" id="option3_form" name="portfolio_shares_a3" min="0" max="100" step="1" value="0"/>
                 <input type="button" onclick="inc(option3_form,option3_slider)" class="btn btn-outline-secondary" id="option3_form_inc" value="+">
             </div>
             </td>
@@ -86,12 +86,12 @@
                 <b> {{ lottery_4.1 }} </b>
             </td>
             <td>
-                <input type="range" oninput = "update_value(option4_slider,option4_form)" min="0" max="100" step=".01" id="option4" value="0" name="portfolio_shares_a4">
+                <input type="range" oninput = "update_value(option4_slider,option4_form)" min="0" max="100" step="1" id="option4" value="0" name="portfolio_shares_a4">
             </td>
             <td>
                 <div class="input-group">
                 <input type="button" onclick="dec(option4_form,option4_slider)"  class="btn btn-outline-secondary" id="option4_form_dec" value="-">
-                <input type="number" oninput = "update_value(option4_form,option4_slider)" class="form-control" id="option4_form" name="portfolio_shares_a4" min="0" max="100" step=".01" value="0"/>
+                <input type="number" oninput = "update_value(option4_form,option4_slider)" class="form-control" id="option4_form" name="portfolio_shares_a4" min="0" max="100" step="1" value="0"/>
                 <input type="button" onclick="inc(option4_form,option4_slider)" class="btn btn-outline-secondary" id="option4_form_inc" value="+">
             </div>
             </td>
@@ -108,12 +108,12 @@
                 <b> {{ lottery_5.1 }} </b>
             </td>
             <td>
-                <input type="range" oninput = "update_value(option5_slider,option5_form)" min="0" max="100" step=".01" id="option5" value="0" name="portfolio_shares_a5">
+                <input type="range" oninput = "update_value(option5_slider,option5_form)" min="0" max="100" step="1" id="option5" value="0" name="portfolio_shares_a5">
             </td>
             <td>
                 <div class="input-group">
                 <input type="button" onclick="dec(option5_form,option5_slider)"  class="btn btn-outline-secondary" id="option5_form_dec" value="-">
-                <input type="number" oninput = "update_value(option5_form,option5_slider)" class="form-control" id="option5_form" name="portfolio_shares_a5" min="0" max="100" step=".01" value="0"/>
+                <input type="number" oninput = "update_value(option5_form,option5_slider)" class="form-control" id="option5_form" name="portfolio_shares_a5" min="0" max="100" step="1" value="0"/>
                 <input type="button" onclick="inc(option5_form,option5_slider)" class="btn btn-outline-secondary" id="option5_form_inc" value="+">
             </div>
             </td>
@@ -124,12 +124,12 @@
             <td> <b>Tokens</b> </td>
             <td> </td>
             <td> </td>
-            <td> <input type="range" oninput = "update_value(tokens_slider,tokens_form)" min="0" max="100" step=".01" value="100" id="tokens_slider" name="tokens"> </td>
+            <td> <input type="range" oninput = "update_value(tokens_slider,tokens_form)" min="0" max="100" step="1" value="100" id="tokens_slider" name="tokens"> </td>
             <td>
                 <div class="input-group">
-                <input type="button" onclick="dec(tokens_form,tokens_slider)"  class="btn btn-outline-secondary" id="tokens_dec" value="-">
-                <input type="number" oninput = "update_value(tokens_form,tokens_slider)" class="form-control" id="tokens_form" name="tokens" min="0" max="100" step=".01" value="100"/>
-                <input type="button" onclick="inc(tokens_form,tokens_slider)" class="btn btn-outline-secondary" id="tokens_inc" value="+">
+                <input type="button" onclick="dec5(tokens_form,tokens_slider)"  class="btn btn-outline-secondary" id="tokens_dec" value="-">
+                <input type="number" oninput = "update_value(tokens_form,tokens_slider)" class="form-control" id="tokens_form" name="tokens" min="0" max="100" step="1" value="100"/>
+                <input type="button" onclick="inc5(tokens_form,tokens_slider)" class="btn btn-outline-secondary" id="tokens_inc" value="+">
             </div>
         </tr>
 
