--- a/_static/templates/Trivial_DecisionScreen.html
+++ b/_static/templates/Trivial_DecisionScreen.html
@@ -1,5 +1,7 @@
 {{ block title }}
-    Please take a decision
+<div style="float: center; text-align: center;">
+    Please take a decision (Decison 1 out of 5)
+</div>
 {{ endblock }}
 
 {{ block content }}
@@ -8,8 +10,8 @@
     <table class="table">
         <tr>
             <td> </td>
-            <td> <b> Payment if H </b> </td>
-            <td> <b> Payment if T </b> </td>
+            <td> <b> Payment if Heads </b> </td>
+            <td> <b> Payment if Tails </b> </td>
         </tr>
 
         <tr>
@@ -32,13 +34,12 @@
                 <b> {{ lottery_2.1 }} </b>
             </td>
         </tr>
-        <tr>
-            <td> </td>
-            <td> </td>
-            <td> {{ next_button }} </td>
-        </tr>
     </table>
 </font>
+
+<div style="float: right; text-align: right;">
+{% next_button %}
+</div>
     
 
 {{ endblock }}
