adding task instructions

--- a/_static/templates/Complex_DecisionScreen.html
+++ b/_static/templates/Complex_DecisionScreen.html
@@ -1,5 +1,5 @@
 {{ block title }}
-    Please take a decision
+    Please take a decision (Decision 1 out of 5)
 {{ endblock }}
 
 {{ block content }}
@@ -8,8 +8,8 @@
     <table class="table">
         <tr>
             <td> </td>
-            <td> <b> Payment if H </b> </td>
-            <td> <b> Payment if T </b> </td>
+            <td> <b> Payment if Heads </b> </td>
+            <td> <b> Payment if Tales </b> </td>
             <td> </td>
             <td> </td>
         </tr>
