--- a/_static/templates/Complex_DecisionScreen.html
+++ b/_static/templates/Complex_DecisionScreen.html
@@ -1,5 +1,5 @@
 {{ block title }}
-    Please take a decision (Decision 1 out of 5)
+    Please take a decision (Decison {{player.subsession.round_number}} out of {{C.NUM_ROUNDS}})
 {{ endblock }}
 
 {{ block content }}
