--- a/_static/templates/DelegationInstructions.html
+++ b/_static/templates/DelegationInstructions.html
@@ -9,7 +9,7 @@ Block 2: Instructions
 <div class="card bg-light">
     <div class="card-body">
 
-You have now the option to ìcopyî one of the subjects on the list.
+You have now the option to copy one of the subjects on the list.
 When you copy a subject, the computer chooses for you the same asset and holding decisions as the chosen subject.
 To help you make the best possible decision we provide you with the information about the other subjects.
 
