--- a/_static/templates/DelegationInstructions.html
+++ b/_static/templates/DelegationInstructions.html
@@ -9,26 +9,25 @@ Block 2: Instructions
 <div class="card bg-light">
     <div class="card-body">
 
-You have now the option to copy one of the subjects on the list.
-When you copy a subject, the computer chooses for you the same asset and holding decisions as the chosen subject.
-To help you make the best possible decision we provide you with the information about the other subjects.
+You will now be given the option to either perform the task on your own as in the previous five rounds or to copy the choice of somebody else who has previously played this game. When you choose to copy another player, the computer chooses for you the same asset as this subject has chosen in their round six. 
 
 <br><br>
 
-<b> Payment </b> is the payment subject recived after the Block 1.
-Note that Payment <b>does not determine the payment you will get</b>, as it depends on the coin flip and random selection of the decision round chosen for payment.
+We will provide you with a list of subjects who have previously player this game. To make the best possible decision we will also provide you with information on their investment choices in the previous five rounds. 
+
+<br><br>
+
+<b>Payments</b> are the payments of the subjects in the first five rounds. Note that Payment <b>does not determine the payment you will get</b>, as it depends on the (unknown) choice of the subject in round six and the realization of a coin flip. 
 
 <br>
 <br>
 
-<b> Risk rating </b> is the level of risk subject chosen in the Block 1.
-Risk ratings take the values of A, B, C, and D, where A corresponds to the least risky choice and D to the most risky choice.
+<b>Risk rating</b> is the level of risk subjects took in their choices. Risk ratings take the values of A, B, C, and D, where A corresponds to the least risky choice and D to the most risky choice. 
 
 <br>
 <br>
 
-<b> Quality rating </b> is the level of the quality of decision in the Block 1 in terms of maximization of the expected payment.
-Quality ratings take the values of A, B, C, and D, where A corresponds to the highest quality and D to the lowest quality choice.
+<b>Quality rating</b> indicates the “efficiency” of the subject’s choices. An <b>A</b> quality rating indicates that there was no way to increase payments for both heads and tails. Other ratings indicate that different investment choices could have increased payments (a little for B, a lot for D) for one coinflip (Heads or Tails) without decreasing payments for the other coin flip (Tails or Heads).
 
 
 <br>
