finalizing the new treatments

--- a/_static/templates/ComplexDelegationScreen.html
+++ b/_static/templates/ComplexDelegationScreen.html
@@ -4,10 +4,11 @@
 
 {{ block content }}
 <font size="4">
-<table class="table">
+
+    <table class="table">
         <tr> 
             <td>
-            <b> The choices you will face are: </b>
+            <b> The menu you will face is: </b>
             </td>
             <td> </td>
             <td> </td>
@@ -15,11 +16,14 @@
         <tr>
             <td> </td>
             <td> <b> Payment if Heads </b> </td>
-            <td> <b> Payment if Tails </b> </td>
+            <td> <b> Payment if Tales </b> </td>
+            <td> </td>
+            <td> </td>
         </tr>
 
         <tr>
-            <td> Option 1 </td>
+            <td> <b> Option 1 </b>
+            </td>
             <td>
                 <b> {{ lottery_1.0 }} </b>
             </td>
@@ -28,14 +32,47 @@
             </td>
         </tr>
         <tr>
-            <td>
-                Option 2
+            <td> <b> Option 2 </b>
             </td>
             <td>
                 <b> {{ lottery_2.0 }} </b>
             </td>
             <td>
                 <b> {{ lottery_2.1 }} </b>
+            </td>
+        </tr>
+
+        <tr>
+            <td> <b> Option 3 </b>
+            </td>
+            <td>
+                <b> {{ lottery_3.0 }} </b>
+            </td>
+            <td>
+                <b> {{ lottery_3.1 }} </b>
+            </td>
+        </tr>
+
+        <tr>
+            <td> <b> Option 4 </b>
+            </td>
+            <td>
+                <b> {{ lottery_4.0 }} </b>
+            </td>
+            <td>
+                <b> {{ lottery_4.1 }} </b>
+            </td>
+        </tr>
+
+
+        <tr>
+            <td> <b> Option 5 </b>
+            </td>
+            <td>
+                <b> {{ lottery_5.0 }} </b>
+            </td>
+            <td>
+                <b> {{ lottery_5.1 }} </b>
             </td>
         </tr>
 </table>
@@ -60,9 +97,9 @@
     </tr>
 </table>
 
-<b>
-If you want to delegate please select one of the options below
-</b>
+
+
+<b>If you want to delegate please select one of the options below</b>
 
 <br>
 
