--- a/_static/templates/Trivial_DecisionScreen.html
+++ b/_static/templates/Trivial_DecisionScreen.html
@@ -1,6 +1,6 @@
 {{ block title }}
 <div style="float: center; text-align: center;">
-    Please take a decision (Decison {{player.subsession.round_number}} out of {{C.NUM_ROUNDS}})
+    Please choose an option (Decison {{player.subsession.round_number}} out of {{C.NUM_ROUNDS}})
 </div>
 {{ endblock }}
 
