--- a/_static/templates/ComplexDelegationScreen.html
+++ b/_static/templates/ComplexDelegationScreen.html
@@ -1,5 +1,7 @@
 {{ block title }}
+<div style="float: center; text-align: center;">
     Please take a decision
+</div>
 {{ endblock }}
 
 {{ block content }}
