--- a/_static/templates/Complex_DecisionScreen.html
+++ b/_static/templates/Complex_DecisionScreen.html
@@ -1,5 +1,7 @@
 {{ block title }}
+<div style="float: center; text-align: center;">
     Please take a decision (Decison {{player.subsession.round_number}} out of {{C.NUM_ROUNDS}})
+</div>
 {{ endblock }}
 
 {{ block content }}
@@ -9,7 +11,7 @@
         <tr>
             <td> </td>
             <td> <b> Payment if Heads </b> </td>
-            <td> <b> Payment if Tales </b> </td>
+            <td> <b> Payment if Tails </b> </td>
             <td> </td>
             <td> </td>
         </tr>
