--- a/_static/templates/Complex_Results.html
+++ b/_static/templates/Complex_Results.html
@@ -1,5 +1,7 @@
 {{ block title }}
-    Final Results
+<div style="float: center; text-align: center;">
+     Results
+</div>
 {{ endblock }}
 
 {{ block content }}
