--- a/_static/templates/Welcome.html
+++ b/_static/templates/Welcome.html
@@ -1,20 +1,27 @@
 {{ block title }}
-    Welcome to the experiment
+<div style="float: center; text-align: center;">
+    Comprehension Check
+</div>
 {{ endblock }}
 
 {{ block content }}
 
-<font size="4">
-    Here are some instructions...
+<div class="card bg-light">
+    <div class="card-body">
+        <font size="4">
+            In order to enter the study you need to pass the comprehension check.
+            You will be asked two simple quesitons based on the instructions.
+            You have <b>3 attempts</b> to correctly answer the questions.
+            If you fail to do so, you will be asked to return the study.
+        </font>
+    </div>
+</div>
 
 <br>
-<br>
 
-<div style="float: right;">
+<div style="float: center; text-align: center;">
 {% next_button %}
 </div>
 
-
-</font>
 
 {{ endblock }}
