--- a/_static/templates/Welcome.html
+++ b/_static/templates/Welcome.html
@@ -9,8 +9,8 @@
 <div class="card bg-light">
     <div class="card-body">
         <font size="4">
-            In order to enter the study you need to pass the comprehension check.
-            You will be asked two simple quesitons based on the instructions.
+            In order to enter the study, you need to pass the comprehension check.
+            You will be asked two simple questions based on the instructions.
             You have <b>3 attempts</b> to correctly answer the questions.
             If you fail to do so, you will be asked to return the study.
         </font>
