--- a/_static/templates/DelegationInstructions.html
+++ b/_static/templates/DelegationInstructions.html
@@ -9,15 +9,17 @@ Block 2: Instructions
 <div class="card bg-light">
     <div class="card-body">
 
-You will now be given the option to either perform the task on your own as in the previous five rounds or to copy the choice of somebody else who has previously played this game. When you choose to copy another player, the computer chooses for you the same asset as this subject has chosen in their round six. 
+You will now be given the option to either perform the task on your own as in the previous four rounds or to copy the choice of somebody else who has previously played this game. When you choose to copy another player, the computer chooses for you the same asset as this subject has chosen in their round six. 
 
 <br><br>
 
-We will provide you with a list of subjects who have previously player this game. To make the best possible decision we will also provide you with information on their investment choices in the previous five rounds. 
+The screen contains information about the decision you would need to take if you decide to proceed on your own.
+We will also provide you with a list of subjects who have previously player this game. To make the best possible decision we will also provide you with information on their investment choices in the previous five rounds. 
 
 <br><br>
 
-<b>Payments</b> are the payments of the subjects in the first five rounds. Note that Payment <b>does not determine the payment you will get</b>, as it depends on the (unknown) choice of the subject in round six and the realization of a coin flip. 
+<b>Payments</b> is the payment player received after participation in the experiment.
+Note that Payment <b>does not determine the payment you will get</b>, as it depends on the (unknown) choice of the subject in one out of five decision rounds. 
 
 <br>
 <br>
@@ -27,7 +29,9 @@ We will provide you with a list of subjects who have previously player this game
 <br>
 <br>
 
-<b>Quality rating</b> indicates the “efficiency” of the subject’s choices. An <b>A</b> quality rating indicates that there was no way to increase payments for both heads and tails. Other ratings indicate that different investment choices could have increased payments (a little for B, a lot for D) for one coinflip (Heads or Tails) without decreasing payments for the other coin flip (Tails or Heads).
+<b>Quality rating</b> indicates the “efficiency” of the player's choices.
+Quality rating measures whether it was possible to spend the endowment in a more efficient manner.
+That is, the higher is the rating the smaller is potential amount of cash value wasted while taking the decision.
 
 
 <br>
