--- a/_static/templates/Simple_DecisionScreen.html
+++ b/_static/templates/Simple_DecisionScreen.html
@@ -1,6 +1,6 @@
 {{ block title }}
 <div style="float: center; text-align: center;">
-    Please choose an option (Decison {{player.subsession.round_number}} out of {{C.NUM_ROUNDS}})
+    Please choose an option (Decison <b style ="color: blue">{{player.subsession.round_number}}</b> out of {{C.NUM_ROUNDS}})
 </div>
 {{ endblock }}
 
